2014-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ttf: Updated FreeType to release 2.5.3 of March 6, 2014.

	* jpeg: Update to libjpeg 9a of 19-Jan-2014.

	* png: Update to Libpng 1.6.10 - March 6, 2014.

2014-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTResourceToBlob): According to Microsoft
	Report article 193678 (http://support.microsoft.com/kb/193678),
	FreeResource() is not needed in WIN32 and performs no useful
	function.  Remove use of it.  Also remove use of UnlockResource()
	which is similarly unuseful for WIN32.

	* configure.ac (MAGICK_LIBRARY_REVISION): Test for Windows
	_aligned_malloc() is not reliable.  Use Windows CRT version to
	decide if it is available.

2014-03-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h: Make sure that Windows _aligned_malloc() is not
	used under MinGW unless the CRT version allows it.

2014-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (InterpolateViewColor): Applied patch by
	Troy Patteson plus fixes to ignore opacity channel if image matte
	is false.  Replaces most of the code rewritten on 2014-02-16 and
	which produced a faint darkened border.  The results look stellar
	now.

2014-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c: Applied patch by Troy Patteson to improve
	non-integral rotation by around 40% by minimizing added image
	borders.  This may cause small differences in results for some
	images.

	* reference/filter/Rotate10.miff: Update rotate 10 degrees
	reference image so that PerlMagick test passes.

	* magick/shear.c: Applied patch by Troy Patteson to fix
	SourceForge issue #260 "Rotation exhibits clipping/shearing errors
	for short wide images at some angles".

2014-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Fix documentation to note that 'unspecified
	alpha' is the GraphicsMagick default when writing TIFF rather than