@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020140309"
-#define public MagickPackageReleaseDate "snapshot-20140309"
+#define public MagickPackageVersionAddendum ".020140312"
+#define public MagickPackageReleaseDate "snapshot-20140312"
