@@ -11,7 +11,7 @@ rwfile=./rwfile
 check_types='bilevel gray pallette truecolor'
 
 # Number of tests we plan to run
-test_plan_fn 512
+test_plan_fn 520
 
 # AVS format
 for type in ${check_types}
@@ -403,6 +403,13 @@ for type in ${check_types}
 do
   test_command_fn "WBMP ${type}" ${MEMCHECK} ${rwfile} -filespec "out_${type}_%d" "${SRCDIR}/input_${type}.miff" WBMP
   test_command_fn "WBMP ${type} (stdio)" ${MEMCHECK} ${rwfile} -stdio -filespec "out_${type}_stdio_%d" "${SRCDIR}/input_${type}.miff" WBMP
+done
+
+# WEBP format
+for type in ${check_types}
+do
+  test_command_fn "WEBP ${type}" -F WEBP ${MEMCHECK} ${rwfile} -filespec "out_${type}_%d" "${SRCDIR}/input_${type}.miff" WEBP
+  test_command_fn "WEBP ${type} (stdio)" -F WEBP ${MEMCHECK} ${rwfile} -stdio -filespec "out_${type}_stdio_%d" "${SRCDIR}/input_${type}.miff" WEBP
 done
 
 # XBM format
