@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2014-03-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>tests/{rwblob.tap, rwfile.tap}: Added tests for WEBP.</li>
+<li>tests/{rwblob.c, rwfile.c}: Add lossy hint for WEBP.</li>
+<li>coders/webp.c (WriteWEBPImage): Fix inverted return status.
+Added a tiny bit of logging.</li>
+</ul>
+</blockquote>
 <p>2014-03-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
